// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Message /> renders message from active user 1`] = `
<div
  className="Message-messageWrapper-61 Message-messageWrappperFromMe-62"
>
  <div
    className="MuiPaper-root-67 MuiPaper-shadow2-71 MuiPaper-rounded-68 Message-message-63 Message-messageFromMe-64"
  >
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104"
      style={
        Object {
          "color": "#ffca28",
        }
      }
    >
      me
    </span>
    <p
      className="MuiTypography-root-94 MuiTypography-body1-103"
    >
      Hello, World!
    </p>
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104"
    >
      2 days ago
    </span>
  </div>
  <div
    className="MuiAvatar-root-118 MuiAvatar-colorDefault-119"
    style={
      Object {
        "backgroundColor": "#ffca28",
      }
    }
  >
    M
  </div>
</div>
`;

exports[`<Message /> renders message from other users 1`] = `
<div
  className="Message-messageWrapper-61"
>
  <div
    className="MuiAvatar-root-118 MuiAvatar-colorDefault-119"
    style={
      Object {
        "backgroundColor": "#ffca28",
      }
    }
  >
    S
  </div>
  <div
    className="MuiPaper-root-67 MuiPaper-shadow2-71 MuiPaper-rounded-68 Message-message-63"
  >
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104"
      style={
        Object {
          "color": "#ffca28",
        }
      }
    >
      someone
    </span>
    <p
      className="MuiTypography-root-94 MuiTypography-body1-103"
    >
      Hello, World!
    </p>
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104"
    >
      2 days ago
    </span>
  </div>
</div>
`;

exports[`<Message /> renders name in status message correctly 1`] = `
<div
  className="Message-messageWrapper-61"
>
  <p
    className="MuiTypography-root-94 MuiTypography-body1-103 Message-statusMessage-65"
  >
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104 Message-statusMessageUser-66"
      style={
        Object {
          "color": "#ffca28",
        }
      }
    >
      Name Surname
    </span>
    Hello, World!
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104"
    >
      2 days ago
    </span>
  </p>
</div>
`;

exports[`<Message /> renders name of active user correctly 1`] = `
<div
  className="Message-messageWrapper-61 Message-messageWrappperFromMe-62"
>
  <div
    className="MuiPaper-root-67 MuiPaper-shadow2-71 MuiPaper-rounded-68 Message-message-63 Message-messageFromMe-64"
  >
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104"
      style={
        Object {
          "color": "#ffca28",
        }
      }
    >
      Name Surname
    </span>
    <p
      className="MuiTypography-root-94 MuiTypography-body1-103"
    >
      Hello, World!
    </p>
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104"
    >
      2 days ago
    </span>
  </div>
  <div
    className="MuiAvatar-root-118 MuiAvatar-colorDefault-119"
    style={
      Object {
        "backgroundColor": "#ffca28",
      }
    }
  >
    NS
  </div>
</div>
`;

exports[`<Message /> renders name of other users correctly 1`] = `
<div
  className="Message-messageWrapper-61"
>
  <div
    className="MuiAvatar-root-118 MuiAvatar-colorDefault-119"
    style={
      Object {
        "backgroundColor": "#ffca28",
      }
    }
  >
    NS
  </div>
  <div
    className="MuiPaper-root-67 MuiPaper-shadow2-71 MuiPaper-rounded-68 Message-message-63"
  >
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104"
      style={
        Object {
          "color": "#ffca28",
        }
      }
    >
      Name Surname
    </span>
    <p
      className="MuiTypography-root-94 MuiTypography-body1-103"
    >
      Hello, World!
    </p>
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104"
    >
      2 days ago
    </span>
  </div>
</div>
`;

exports[`<Message /> renders status message 1`] = `
<div
  className="Message-messageWrapper-61"
>
  <p
    className="MuiTypography-root-94 MuiTypography-body1-103 Message-statusMessage-65"
  >
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104 Message-statusMessageUser-66"
      style={
        Object {
          "color": "#ffca28",
        }
      }
    >
      me
    </span>
    Hello, World!
    <span
      className="MuiTypography-root-94 MuiTypography-caption-104"
    >
      2 days ago
    </span>
  </p>
</div>
`;
